# Nono

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FEATURES.md  README.md  README_docker.md  SECURITY.md  docker-compose.yml  llms.txt  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
nono/: README.md  README_cli.md  README_config.md  README_guide.md  README_hooks.md  README_human_in_the_loop.md  README_mcp.md  README_progressive_disclosure.md  README_projects.md  README_routines.md  README_sandbox_guide.md  README_shortfx.md  README_skills.md  README_state_introspection.md  README_tasker_vs_agent.md  README_tools.md  README_workspace.md  __init__.py  apikey.txt  cli.py  config.py  config.toml  connector_genai_keys_models.txt  demo_formulite.py  hitl.py  hooks.py  project.py  requeriments.txt  server.py  tracing.py  wizard.py
tests/: test_agent_factory.py  test_agent_orchestration_hooks.py  test_anthropic_service.py  test_backtracking_cod_mediator_dac_beam.py  test_batch4_agents.py  test_compaction.py  test_compiler_checkpoint_fanout_swarm_memory_priority.py  test_content_scopes.py  test_debate_escalation_supervisor_voting.py  test_guardrail_bestofn_batch_cascade.py  test_handoff_groupchat.py  test_hierarchical_agent.py  test_hooks.py  test_hooks_engine.py  test_human_input.py  test_keepinmind.py  test_mapreduce_consensus_producer_reviewer.py  test_mcp_client.py  test_montecarlo_got_blackboard_moe_cove.py  test_parallel_message_map.py  test_parallel_result_key.py  test_project.py  (+26 more)
(+210 files in other folders)
