[project]
name = "nono"
version = "1.2.0"
description = "NONO: No Overhead, Neural Operations. An easy AI framework for GenAI-driven operations."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Javier Rodríguez", email = "jrodriguezga@outlook.com" },
]
dependencies = [
    "jinja-prompt-py",
    "google-generativeai>=0.8.0",
    "openai>=1.0.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
azure-inference = ["azure-ai-inference>=1.0.0b1", "azure-identity>=1.15.0"]
azure-projects = ["azure-ai-projects>=1.0.0b1", "azure-identity>=1.15.0"]
azure = ["azure-ai-inference>=1.0.0b1", "azure-ai-projects>=1.0.0b1", "azure-identity>=1.15.0"]
mcp = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://github.com/jrodriguezgar/Nono"
Repository = "https://github.com/jrodriguezgar/Nono"
Issues = "https://github.com/jrodriguezgar/Nono/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nono"]
